# SocialSift

./: .gitignore  Makefile  README.md  example.env  pyproject.toml  run_flask.py
SocialSift/: README.md  pyproject.toml  setup.py
SocialSift/docs/: conf.py
SocialSift/references/: db_schema_init.sql
docs/: Makefile  index.rst  make.bat
docs/ResultPaper_Gastronomic_Intelligence_Hub/: ResultPaper_Gastronomic_Intelligence_Hub.Rmd  references.bib
docs/drafts/: expose_vst.md
gih/: .coveragerc  Dockerfile  LICENSE  Procfile  README.md  app.json  autoapp.py  docker-compose.yml  package-lock.json  package.json  webpack.config.js
gih/.github/workflows/: lint.yml
gih/assets/js/: main.js  plugins.js  script.js
gih/gih/: app.py  commands.py  extensions.py  settings.py  utils.py
gih/gih/public/: forms.py  views.py
gih/gih/static/: cache_manifest.json
gih/gih/templates/: layout.html
gih/gih/user/: models.py
gih/supervisord_programs/: gunicorn.conf
gih/tests/: conftest.py  factories.py  test_database.py  test_forms.py  test_functional.py  test_models.py
notebooks/: mongodb-reviews-lda.ipynb
references/: oracle_db_schema.vuerd.json
references/mongodb/collections/: users.json
references/mongodb/samples/: document_resto.json  document_review.json
references/mongodb/schemas/: mongo-schema.dbml
references/mongodb/validators/: snapshot.json
src/webScraper/webScraper/: items.py  middlewares.py  pipelines.py  settings.py
webscraper/: items.py  middlewares.py  pipelines.py  processors.py  settings.py  utils.py
webscraper/spiders/: golocal_reviews.py  restos.py  restos_merged.py  webarchive.py
webscraper/webscraper/: items.py  itemsloaders.py  middlewares.py  pipelines.py  processors.py  settings.py  utils.py
webscraper/webscraper/spiders/: golocal_reviews.py  playwright_websites_crawler.py  restaurants_spider.py  (+6 more)
website/: __init__.py  app.py  database.py  extensions.py  mongo_queries.py  routes.py  run.py  settings.py
website/gih_site/: __init__.py  app.py  database.py  extensions.py  mongo_queries.py  routes.py  settings.py
website/public/: forms.py  views.py
website/templates/: 401.html  404.html  500.html  layout.html  nav.html
website/user/: forms.py  models.py
(+19 files in other folders)
