[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gih"
version = "0.1.0"
authors = [
    {name = "Vladislav Stasenko", email = "stasenko.vladislav@fh-swf.de"},
    {name = "Sinan Eker", email = "eker.sinan@fh-swf.de"},
]
description = "Web mining project focusing on the analysis of public data of gastronomic companies within Germany."
readme = "README.rst"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "flask",
    "scrapy",
    "pymongo",
    "python-dotenv",
    "python-dateutil",
    "phonenumbers",
    "scrapy-user-agents",
    "flask-login",
    "flask-wtf",
    "flask-caching",
    "email-validator"
]